tags and slight refactor
improvements galore

improvements galore
